syntax = "proto3";

package aperture.policy.sync.v1;

import "aperture/policy/language/v1/flowcontrol.proto";
import "aperture/policy/sync/v1/common_attributes.proto";

message LoadRegulatorWrapper {
  // CommonAttributes
  CommonAttributes common_attributes = 1;
  // Load Regulator
  policy.language.v1.LoadRegulator load_regulator = 2;
}

message LoadRegulatorDynamicConfigWrapper {
  // CommonAttributes
  CommonAttributes common_attributes = 1;
  // LoadRegulatorDynamicConfig is the dynamic configuration for the Load Regulator.
  policy.language.v1.LoadRegulator.DynamicConfig load_regulator_dynamic_config = 2;
}

message LoadRegulatorDecisionWrapper {
  // CommonAttributes
  CommonAttributes common_attributes = 1;
  // Load Regulator Decision
  LoadRegulatorDecision load_regulator_decision = 2;
}

message LoadRegulatorDecision {
  double accept_percentage = 1;
}
